# robotics_g7

./: .gitignore  LICENSE  README.md
IR_sensors/: IR_calibration.ods
arduino/KTH_Robot13_group7/: KTH_Robot13_group7.ino  KTH_Robot13_group7.ino~  KTH_Robot13_rev2.ino~
camera/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  README.md~  cmake_install.cmake  manifest.xml  manifest.xml~
color_filter/: .pydevproject  CMakeLists.txt  CMakeLists.txt~  README.md
contour_filter/: .pydevproject  CMakeLists.txt  mainpage.dox
explorer/: .pydevproject  CMakeLists.txt  Makefile~  mainpage.dox  manifest.xml
hist_detection/: .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
keyboard/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
obj_detection/: .pydevproject  CMakeLists.txt  HSV background detection.txt  Makefile  mainpage.dox  manifest.xml
obj_detection/launch/: obj_detection.launch  rosbag_camera.launch
obj_detection/src/: color_filter.cpp  conditional_euclidean_clustering.cpp  contour_filter.cpp  pcl_detection.cpp  pcl_processing.cpp  recognition_constants.hpp  recognition_master.cpp  test.cpp  test.cpp~  tools_pcl_object_cutter.cpp
obj_detection/src/headers/: color_filter.hpp  conditional_euclidean_clustering.hpp  contour_filter.hpp  pcl_detection.hpp  pcl_processing.hpp  recognition_master.hpp
obj_detection/tools/: camera_pointcloud.vcg  primesensor_settings_rviz.vcg
object_recognition/: .pydevproject  CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  mainpage.dox  manifest.xml  object_recognition.cbp
robot/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  manifest.xml
simulator/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
wall_detection/: .pydevproject  CMakeLists.txt
(+178 files in other folders)
